# rpn_engine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ctest.yml
doc/: CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  antichattering.cpp  antichattering.hpp  complexstackstrategy.hpp  console.cpp  console.hpp  encodekey.cpp  encodekey.hpp  main.cpp  parameters.cmake  rpnengine.hpp  segmentdecoder.cpp  segmentdecoder.hpp  stackstrategy.cpp  stackstrategy.hpp
test/: CMakeLists.txt  test_antichattering.cpp  test_basic_bitwise.cpp  test_basic_math.cpp  test_basics.cpp  test_complex.cpp  test_complex_bitwise.cpp  test_console.cpp  test_console_editing.cpp  test_console_hex_edit.cpp  test_console_hex_operation.cpp  test_console_operation.cpp  test_double_math.cpp  test_encodekey.cpp  test_engine.cpp  test_segmentdecoder.cpp
